Change landing page background

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html lang="en" class="bg-gradient-to-r from-indigo-600 to-blue-400 antialiased w-screen h-full">
+<html lang="en" class="bg-slate-100 antialiased w-screen h-full">
   <head>
     <title>My Smol URL - Shorten your URL</title>
     <%= render "layouts/meta" %>
