Update page title

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,7 @@
 
 <html lang="en" class="bg-slate-100 antialiased w-screen h-full">
   <head>
-    <title>My Smol URL - Shorten your URL</title>
+    <title>SmolURL - Shorten your URLs & Track Click Events!</title>
     <%= render "layouts/meta" %>
 
     <%= csrf_meta_tags %>
