Change website url

--- a/app/views/layouts/_meta.html.erb
+++ b/app/views/layouts/_meta.html.erb
@@ -8,14 +8,12 @@
 
 <!-- Open Graph / Facebook -->
 <meta property="og:type" content="website">
-<meta property="og:url" content="https://mysmolurl.com/">
+<meta property="og:url" content="https://smolurl.me/">
 <meta property="og:title" content="SmolURL - Shorten your URL">
 <meta property="og:description" content="Shorten, share and track analytics of your link clicks for free!">
-<!--<meta property="og:image" content="https://rank-tracker-assets.s3.us-west-2.amazonaws.com/serpmarker_preview.png">-->
 
 <!-- Twitter -->
 <meta property="twitter:card" content="summary_large_image">
-<meta property="twitter:url" content="https://mysmolurl.com/">
+<meta property="twitter:url" content="https://smolurl.me/">
 <meta property="twitter:title" content="SmolURL - Shorten your URL">
 <meta property="twitter:description" content="Shorten, share and track analytics of your link clicks for free!">
-<!--<meta property="twitter:image" content="https://rank-tracker-assets.s3.us-west-2.amazonaws.com/serpmarker_preview.png">-->
